--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-portfolioSite/settings.py
-portfolioSite/__pycache__
+/portfolioSite/portfolioSite/settings.py
+/portfolioSite/portfolioSite/__pycache__
 /portfolioSite/db.sqlite3
