--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/portfolioSite/portfolioSite/settings.py
-/portfolioSite/portfolioSite/__pycache__
-/portfolioSite/db.sqlite3
+portfolioSite/settings.py
+__pycache__
+db.sqlite3
